RESOLVED FIXED294000
[Safe CPP] Address Warnings in Quad.h
https://bugs.webkit.org/show_bug.cgi?id=294000
Summary [Safe CPP] Address Warnings in Quad.h
Brandon
Reported 2025-06-03 20:12:02 PDT
Address safe cpp warnings in Quad.h.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-06-03 20:12:12 PDT
Radar WebKit Bug Importer
Comment 2 2025-06-03 20:12:27 PDT
Brandon
Comment 3 2025-06-03 20:14:30 PDT
EWS
Comment 4 2025-06-04 09:16:14 PDT
Committed 295818@main (f56307b11b40): <https://commits.webkit.org/295818@main> Reviewed commits have been landed. Closing PR #46301 and removing active labels.
Ryan Haddad
Comment 5 2025-06-04 09:25:33 PDT
Note You need to log in before you can comment on or make changes to this bug.