[Safe CPP] Address Warnings in Quad.h https://bugs.webkit.org/show_bug.cgi?id=294000 rdar://problem/152549205

Reviewed by Charlie Wolfe.

Address safe cpp warnings in Quad.h. This also fixes css/DeprecatedCSSOMRect.h and css/Rect.h.

 * Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
 * Source/WebCore/css/CSSPropertyInitialValues.cpp:
 (WebCore::isNumber):
 * Source/WebCore/css/RectBase.h:
 (WebCore::RectBase::left const):
 (WebCore::RectBase::protectedTop const): Deleted.
 (WebCore::RectBase::protectedRight const): Deleted.
 (WebCore::RectBase::protectedBottom const): Deleted.
 (WebCore::RectBase::protectedLeft const): Deleted.

Canonical link: https://commits.webkit.org/295818@main