Source/WebCore/css/CSSPropertyInitialValues.cpp
@@ -473,10 +473,10 @@ static bool isNumber(const CSSValue& value, double number, CSSUnitType type)
 
 static bool isNumber(const RectBase& quad, double number, CSSUnitType type)
 {
-    return isNumber(quad.protectedTop(), number, type)
-        && isNumber(quad.protectedRight(), number, type)
-        && isNumber(quad.protectedBottom(), number, type)
-        && isNumber(quad.protectedLeft(), number, type);
+    return isNumber(quad.top(), number, type)
+        && isNumber(quad.right(), number, type)
+        && isNumber(quad.bottom(), number, type)
+        && isNumber(quad.left(), number, type);
 }
 
 static bool isValueID(const RectBase& quad, CSSValueID valueID)
